--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,5 +8,7 @@ jobs:
       - name: Install dependencies
         run: |
           cd $GITHUB_WORKSPACE
+#           python -m pip install --upgrade pip
+#           pip install -r requirements.txt
       - name: Run Tests
         run: python -m unittest tests/*.py
