--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,5 +11,5 @@ jobs:
 #           python -m pip install --upgrade pip
 #           pip install -r requirements.txt
       - name: Run Tests
-        run: python -m unittest tests/*.py
+        run: python -m unittest *.py
         working-directory: ./tests
