--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,7 @@ jobs:
           cd $GITHUB_WORKSPACE
 #           python -m pip install --upgrade pip
 #           pip install -r requirements.txt
+            pip install -e
       - name: Run Tests
         run: python -m unittest tests/*.py
 #        working-directory: ./tests
